tests/ui/link-native-libs/manual-link-unsupported-kind.rs
//@ compile-flags:-l raw-dylib=foo

fn main() {
}

<<<<<<< HEAD
// ferrocene-annotations: um_rustc_l
=======
//~? ERROR unknown library kind `raw-dylib`
>>>>>>> pull-upstream-temp--do-not-use-for-real-code
